--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-movies",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "homepage": "https://darshitraiyani.github.io/movies-clone-react/",
   "type": "module",
   "scripts": {
     "dev": "vite",
