--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Fix absolute paths in HTML to relative
         run: |
           sed -i 's|/logo.png|logo.png|g' dist/index.html
-          sed -i 's|/assets/|assets/|g' dist/index.html
+        #  sed -i 's|/assets/|assets/|g' dist/index.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
